<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Zebrafish Technologies = best group ever!</string>
    <string name="app_name">SociaList</string>
    <string name="ok">OK</string>

    <!-- Splash Screen -->
    <string name="splash_loading">Loading&#8230;</string>
    <string name="connect_title">Cannot Connect to the Internet</string>
    <string name="connect_issue">Your signal strength is too weak. Changes will be local and may not persist.</string>
    <string name="ZBF">Zebra Fish Technologies</string>

    <!-- Home Activity -->
    <string name="push_explain">Allow push notifications? (You can always change
		this later.)</string>

    <!-- Headers -->
    <string name="lists">Lists</string>

    <!-- Dashboard Buttons -->

    <string name="btn_list">My Lists</string>
    <string name="btn_manage">My Items</string>
    <string name="btn_pending">Pending Invites</string>
    <string name="btn_browse">Browse For List</string>
    <string name="btn_settings">Settings</string>

    <!-- Buttons -->
    <string name="invite_button">Invite…</string>
    <string name="assign_button">Assign To…</string>
    <string name="complete_button">Mark Completed</string>
    <string name="label_notes">Notes</string>
    <string name="label_name">Item</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_assignee">Assigned to</string>
    <string name="item_hint">Other info</string>
    <string name="add_to_my_list">Add to My Lists</string>

    <string-array name="default_sorts">
        <item>Dated Added</item>
        <item>Assigned To Me</item>
        <item>Unassigned</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="shared_users">
        <item>Jim Cervone</item>
        <item>Brendan Liu</item>
        <item>Rob Filippi</item>
        <item>Kim Cooperrider</item>
    </string-array>
    
    <string name="tag_hint">Seperate tags by coma</string>

    <!-- Invite -->
    <string name="send_button">Send Invitation</string>
    <string name="invite_activity_title">Invite to List</string>
    
    <string name="invite_to_list">Invite a friend to</string>
    <string name="invite_message_default">I shared a list with you on SociaList! Download the app to check it out.</string>
    
    <string name="invite_method_label">Invite Method</string>
    <string name="invite_message_preview_title">Invite Message</string>
    <string name="pick_contact_label">Pick Contact</string>
    <string name="invite_email_hint">Number or Email</string>
    <string name="message_preview">Message preview</string>
    <string name="invitetypeprompt">Invite Method</string>

    <string-array name="invitetypelist">
        <item>Invite via SMS</item>
        <item>Invite via Email</item>
    </string-array>

    <!-- editlist.xml -->
    <string name="List_name">Name</string>
    <string name="List_name_here">Like "Groceries"</string>
    <string name="List_items">Items</string>
    <string name="No_items_in_list">No items in list.</string>
    <string name="Add_List_Item">Add Item</string>
    <string name="Save">Save</string>
    <string name="CancelNewList">Cancel</string>
    <string name="CID">Comma-Separated Tags</string>
    <string name="CID_hint">picnic, game night</string>
    <string name="CID_explain">Tags let users find and use your list (without sharing your list users) in order to download it as a template.</string>

    <!-- header.xml -->
    <string name="My_Lists">My Lists</string>

    <!-- insidelist_layout.xml -->
    <string name="list_no_items">There aren\'t any items yet! Add some by clicking
		the Add icon.</string>
		
	<!-- my_items_layout.xml -->
    <string name="My_list_stuff">You have no items assigned to you yet.</string>

    <!-- item.xml -->
    <string name="Delete">Delete</string>
    <string name="Next_Item">Next Item</string>
    <string name="Prev_Item">Prev Item</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="completed">Completed</string>

    <!-- listplaceholder.xml -->
    <string name="Create_New_List">Create New List</string>
    <string name="No_lists">You have no lists yet! Add some by clicking
		the Add icon.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last name</string>

    <!-- Async Stuff -->
    <string name="network_access_failure">It was not possible to access the network. Check
		your internet connection.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Would you like to try again?</string>
    <string name="unknown_failure">There was an expected error.</string>
    <string name="processing_wait">Processing. Please wait&#8230;</string>
    <string name="removing_wait">Removing. Please wait&#8230;</string>
    <string name="deleting_wait">Deleting. Please wait&#8230;</string>
    <string name="creating_wait">Creating. Please wait&#8230;</string>
    <string name="adding_wait">Adding. Please wait&#8230;</string>

    <!-- Pending Lists -->
    <string name="accept_invites">Accept Invite(s)</string>
    <string name="ignore_invites">Decline Invites(s)</string>
    <string name="no_invites">No pending invites.</string>
    
    <!--  Date Util  -->
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    
    <!--  Manage List Users -->
    <string name="remove_users">Remove</string>
    <string name="no_list_users">This list isn\'t shared with any users.</string>
    
    <!-- dialog_register.xml -->
    <string name="Name_hint">Name</string>
    <string name="allow_push_hint">Allow push notifications</string>
    <string name="Cancel">Cancel</string>
    <string name="Email">Email</string>
    
    <!-- my_items_layout.xml -->
    <string name="unclaim_button">Unclaim Item</string>
    
    <!-- actionbar stuff -->
    <string name="Select_All">Select All</string>
    <string name="Refresh">Refresh</string>
    
    <!-- my_settings.xml  -->
    <string name="notify">android:text="Notify me when: </string>
    <string name="invited">I\'m invited to a list</string>
    <string name="assigned">An item is assigned to me</string>
    <string name="unassigned">An item is unassigned to me</string>
    <string name="any">Any list item in my lists is updated</string>
    
    <!-- search_listplaceholder.xml  -->
    <string name="search">Search</string>
    
</resources>